--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: Tests
 
 on:
   push:
@@ -24,12 +24,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install uv
       run: |
-        python -m pip install --upgrade pip
         curl -LsSf https://astral.sh/uv/install.sh | sh
-        uv sync
-    - name: Test with pytest
+    - name: Run Tests
       run: |
         uv sync --dev
         .venv/bin/python -m pytest -n 2
