--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ dev-dependencies = [
     "pytest-xdist>=3.6.1",
     "pytest-asyncio>=0.24.0",
     "pytest-httpx>=0.32.0",
-    "ipykernel>=6.29.5",
-    "pandas>=2.2.3",
 ]
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests/",
+]
+asyncio_default_fixture_loop_scope = "session"
