--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -19,17 +19,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
+
     - name: Install uv
       run: |
         curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -40,6 +36,8 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
+
+        jobs:
 
   publish:
     needs:
